--- a/uabot-scenario-maker/scenarios/manual/Ready/AppStore_Gamer_free.json
+++ b/uabot-scenario-maker/scenarios/manual/Ready/AppStore_Gamer_free.json
@@ -24,13 +24,22 @@
     "timeBetweenVisits": 2,
     "timeBetweenActions": 1,
     "pipeline": "default",
+    "defaultOriginLevel1": "Demo",
     "randomCustomData": [
 		{
 			"apiname": "context_persona",
 			"values": ["Gamer"]
         },
-		{
+        {
+			"apiname": "persona",
+			"values": ["Gamer"]
+        },
+        {
 			"apiname": "context_AppType",
+			"values": ["free"]
+		},
+		{
+			"apiname": "AppType",
 			"values": ["free"]
 		},
 		{
@@ -44,6 +53,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -70,7 +86,12 @@
                          "queryText" : "whatsapp", 
                          "docClickTitle" : "WhatsApp Messenger", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                             "context_AppType":"free",
+                             "AppType":"free", 
+                             "context_persona": "Gamer",
+                             "persona": "Gamer"
+                            } 
                     } 
                 },
                 {
@@ -88,6 +109,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -114,7 +142,12 @@
                          "queryText" : "Fortnite", 
                          "docClickTitle" : "Fortnite", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           } 
                     } 
                 },
                 {
@@ -132,6 +165,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -158,7 +198,12 @@
                          "queryText" : "PlayStation App", 
                          "docClickTitle" : "PlayStation App", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -176,6 +221,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -202,7 +254,12 @@
                          "queryText" : "musical.ly", 
                          "docClickTitle" : "musical.ly", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           } 
                     } 
                 },
                 {
@@ -220,6 +277,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -246,7 +310,12 @@
                          "queryText" : "Bitmoji", 
                          "docClickTitle" : "Bitmoji", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -264,6 +333,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -290,7 +366,12 @@
                          "queryText" : "iTunes U", 
                          "docClickTitle" : "iTunes U", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -308,6 +389,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -334,7 +422,12 @@
                          "queryText" : "Best VPN Proxy", 
                          "docClickTitle" : "Best VPN Proxy Betternet", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -352,6 +445,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -378,7 +478,12 @@
                          "queryText" : "Amazon Music", 
                          "docClickTitle" : "Amazon Music", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -396,6 +501,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -422,7 +534,12 @@
                          "queryText" : "trivago", 
                          "docClickTitle" : "trivago: Compare Hotels & Save", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -440,6 +557,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -466,7 +590,12 @@
                          "queryText" : "Sweatcoin", 
                          "docClickTitle" : "Sweatcoin - Sweat for Coin", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -484,6 +613,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -510,7 +646,12 @@
                          "queryText" : "OpenTable", 
                          "docClickTitle" : "OpenTable", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -528,6 +669,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -554,7 +702,12 @@
                          "queryText" : "wish", 
                          "docClickTitle" : "Wish - Shopping Made Fun", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           }  
                     } 
                 },
                 {
@@ -572,6 +725,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -598,7 +758,12 @@
                          "queryText" : "Bank of the West", 
                          "docClickTitle" : "Bank of the West", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"free",
+                            "AppType":"free", 
+                            "context_persona": "Gamer",
+                            "persona": "Gamer"
+                           } 
                     } 
                 },
                 {
@@ -616,6 +781,13 @@
 			"weight": 7,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
