--- a/uabot-scenario-maker/scenarios/manual/Ready/AppStore_Student_paid.json
+++ b/uabot-scenario-maker/scenarios/manual/Ready/AppStore_Student_paid.json
@@ -3,12 +3,13 @@
 	"analyticsendpoint" : "https://usageanalytics.coveo.com/rest/v15/analytics/",
     "orgName": "fcotetrainingorg",
 	"randomGoodQueries": [ 
-        "whatsapp", "fortnite", "minecraft", "playstation app", "my talking pet", "musical.ly", "Afterlight", "bitmoji", "facebook", "mario", 
-        "bitmoji", "clash royale", "clash of clans", "pokemon go", "vpn", "super mario", "final fantasy", "xcom", "plague", "world of goo", "gravity", "clash", "war lord",
-        "rpg", "action shooter", "iTunes U", "PROmote army", "Best VPN", "Webmail++", "Amazon Music", "djay", "trivago", "Munich Travel Guide", "Sweatcoin", "Fitness Buddy", "OpenTable", "Forks Knives", "Wish",
-        "Bank of the West", "conqueror", "war craft", "lord of rings", "sword fight","games", "amazon", "youtube","gmail","amazon prime", "google maps", "candy crush", "angry birds", "photo editor", "free games", "fam", "grindr", "roblox", "house party",
-        "music", "walmart", "video editor", "weather", "wine", "paypal", "solitaire", "quizlet", "hotspot shield", "trivia crack", "ebay", "telegram", "games for free", "color switch",
-        "party app", "group game", "party game", "bumble", "wish", "viber", "episode", "tango"
+        "messenger", "love balls", "decide now", "instagram", "pandora",
+        "Lose It!", "AirBnb", "Todo", "Google Sheets", "Graphing Calculator","games", "amazon", "youtube", "gmail", "google maps", "angry birds", "photo editor", "free games", "house party",
+        "music", "video editor", "weather", "wine", "paypal", "solitaire", "ebay", "telegram", "games for free", "color switch",
+        "party app", "group game", "party game", "wish", "viber", "episode", "tango", "video", "photo", "health", "gps", "map", "phone", "travel", "city", "subway", "news", "web", "protection",
+        "fitness", "martial", "combat", "action", "role play", "puzzle", "brain game", "brain training", "education", "restaurant", "famous", "heroe", "winner", "flag", "feeling", "imagine",
+        "processing", "city", "ghost", "add", "song", "theme", "background", "case", "fighting", "kingdom", "keys", "password", "wiki", "seasonal", "celebrity", "dance", "car", 
+        "glasses", "dream", "dream book", "book", "troll", "color", "road", "star wars", "travel guide", "bank", "emoji", "travel guide", "flash", "food", "delivery", "marvel", "studio", "sudoku"
     ],
 	"randomBadQueries": [
         "how can I watch new anime show from netflix on my iphone", "@instagram", "@snapchat", "@minecraft", 
@@ -20,13 +21,22 @@
     "timeBetweenVisits": 2,
     "timeBetweenActions": 1,
     "pipeline": "default",
+    "defaultOriginLevel1": "Demo",
     "randomCustomData": [
 		{
 			"apiname": "context_persona",
-			"values": ["Gamer"]
+			"values": ["Student"]
         },
-		{
+        {
+			"apiname": "persona",
+			"values": ["Student"]
+        },
+        {
 			"apiname": "context_AppType",
+			"values": ["paid"]
+		},
+		{
+			"apiname": "AppType",
 			"values": ["paid"]
 		},
 		{
@@ -35,6 +45,13 @@
     ],
 	"globalFilter":"@appisfree=false",
     "scenarios" :[
+        {
+            "type" : "SetOrigin",
+            "arguments" : {
+                "originLevel1" : "Demo",
+                "originLevel2" : "App Store"
+            }
+        },
         {
 			"name": "Search And Click - Games",
 			"weight": 1,
@@ -66,7 +83,7 @@
                          "queryText" : "Minecraft", 
                          "docClickTitle" : "Minecraft", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{"context_AppType":"paid", "context_persona": "Student"} 
                     } 
                 },
                 {
@@ -84,6 +101,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -110,7 +134,12 @@
                          "queryText" : "My Talking Pet", 
                          "docClickTitle" : "My Talking Pet", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                             "context_AppType":"paid",
+                             "AppType":"paid",
+                             "context_persona": "Student",
+                             "persona": "Student"
+                            } 
                     } 
                 },
                 {
@@ -128,6 +157,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -154,7 +190,12 @@
                          "queryText" : "Afterlight", 
                          "docClickTitle" : "Afterlight 2", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -172,6 +213,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -198,7 +246,12 @@
                          "queryText" : "red onion", 
                          "docClickTitle" : "Red Onion - Tor-powered web browser for anonymous browsing and darknet", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -216,6 +269,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -242,7 +302,12 @@
                          "queryText" : "promote army", 
                          "docClickTitle" : "PROmote - Army Study Guide", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -260,6 +325,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -286,7 +358,12 @@
                          "queryText" : "Webmail++", 
                          "docClickTitle" : "Webmail++", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -304,6 +381,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -330,7 +414,12 @@
                          "queryText" : "djay", 
                          "docClickTitle" : "djay 2 for iPhone", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -348,6 +437,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -374,7 +470,12 @@
                          "queryText" : "Munich Travel Guide", 
                          "docClickTitle" : "Munich Travel Guide (with Offline Maps) - mTrip", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -392,6 +493,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -418,7 +526,12 @@
                          "queryText" : "Fitness Buddy", 
                          "docClickTitle" : "Fitness Buddy: Gym Workouts", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"paid", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -436,6 +549,13 @@
 			"weight": 1,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
@@ -462,7 +582,12 @@
                          "queryText" : "forks over knives", 
                          "docClickTitle" : "Forks Over Knives - Healthy Recipes & Easy Meals", 
                          "probability" : 0.75, 
-                         "customData":{"context_AppType":"free", "context_persona": "Gamer"} 
+                         "customData":{
+                            "context_AppType":"paid",
+                            "AppType":"paid",
+                            "context_persona": "Student",
+                            "persona": "Student"
+                           } 
                     } 
                 },
                 {
@@ -480,6 +605,13 @@
 			"weight": 7,
 			"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36",
 			"events": [
+                {
+                    "type" : "SetOrigin",
+                    "arguments" : {
+                        "originLevel1" : "Demo",
+                        "originLevel2" : "App Store"
+                    }
+                },
                 {
                     "type": "Search",
                     "arguments": {
