--- a/uabot-scenario-maker/scenarios/manual/Ready/AppStore_Gamer_free.json
+++ b/uabot-scenario-maker/scenarios/manual/Ready/AppStore_Gamer_free.json
@@ -3,7 +3,7 @@
 	"analyticsendpoint" : "https://usageanalytics.coveo.com/rest/v15/analytics/",
     "orgName": "fcotetrainingorg",
 	"randomGoodQueries": [ 
-        "whatsapp", "fortnite", "minecraft", "playstation app", "my talking pet", "musical.ly", "facebook", "mario", 
+        "whatsapp", "fortnite", "minecraft", "playstation app", "musical.ly", "facebook", "mario", 
         "clash royale", "clash of clans", "pokemon go", "vpn", "super mario", "final fantasy", "plague", "world of goo", "gravity", "clash", "war lord",
         "rpg", "action shooter", "iTunes U", "PROmote army", "Best VPN", "Amazon Music", "trivago", "Fitness Buddy", "OpenTable", "Wish",
         "conqueror", "war craft", "lord of rings", "sword fight", "star wars","games", "amazon", "youtube","gmail","amazon prime", "google maps", "candy crush", "angry birds", "photo editor", "free games", "fam", "grindr", "roblox", "house party",
